Add resources playbook and host
Signed-off-by: Denis Volkov <dvolkov@redhat.com>
Change-Id: I5d3872e48b2044e1c65584e8ffe2004b9b767146

--- a/hosts.yml
+++ b/hosts.yml
@@ -48,3 +48,6 @@ all:
         jenkins-staging.ovirt.org:
         jenkins.ovirt.org:
 
+    resources:
+      hosts:
+        resources-stg.ovirt.org:
