ml: add Denis as list admin
Btw, remove Eyal and Evgheni.

Change-Id: I891cec1de13e180e14de55bc2201706cd713c251

--- a/playbooks/mail.yml
+++ b/playbooks/mail.yml
@@ -78,10 +78,9 @@
         admin_users:
           - duck
           - misc
-          - eyal
-          - ederevea
           - doronf
           - didi
+          - dvolkov
         mail_aliases:
           # Person who should get root's mail
           root: "{{ ['root'] + ovirt_infra_emails }}"
